fix:remove-error-redirect

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=https://pet-shop-api-2zab.onrender.com/api
+NEXT_PUBLIC_API_URL=https://pet-shop-api-1-zxf5.onrender.com/api
 NEXT_PUBLIC_EMAIL_HOST=
 NEXT_PUBLIC_PASSWORD_HOST=
